11/1/15 Version 1.2.0:
* ab43ddd fix:fix 404 test to reference 404 handler
* f305093 add admin and version template vars to render contexts, also remove unused vars and replace unused tuple var returns
* 56c2fc7 add template vars for adminName, adminEmail, siteVersion, imsVersion
* 0b52973 add settings for VERSION, SITE_VERSION, and SERVER_EMAIL
* 220ec01 feat:add VERSION so we have a single source of version information
10/11/2015 Version 1.3.0:
* 1ea44ad (HEAD, master) feat: add date and comments to version information
12/11/2015 Version 1.3.1:
* 007f350 (HEAD, master) add help on product code explanation and generation
21/11/2015 Version 1.3.3:
* feac80e (HEAD, master) add TEMP_DIR to settings
26/11/2015 Version 1.4.0:
* 02a49f0 (HEAD, master) feat: Update for paging and small style updates.
28/12/2015 Version 1.5.0:
* 2a55838 (HEAD, master) feat: Update to Django 1.9 from 1.7
29/12/2015 Version 1.5.1:
* 285941e (HEAD, master) Add DEFAULT_FROM_EMAIL to settings. Add Forgot Password link to login form.
* 6ea1c84 (origin/master) fix: Add session messages to registration views/templates
* 64f5747 feat: Add password management features
19/01/2016 Version 1.5.2:
* 3b1671b (HEAD, master) fix: logout issue with non-admin users